<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YimiaoApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="confirm">确定</string>
    <string name="cancle">取消</string>
    <string name="top">置顶</string>
    <string name="reply">回复</string>
    <string name="delete">删除</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!-- ActionBar -->
    <string-array name="children">
        <item>小宝</item>
        <item>欣欣</item>
        <item>kimi</item>
    </string-array>

    <!-- Home -->
    <string name="baby">宝宝</string>
    <string name="vac_book">疫苗本</string>
    <string name="vac_tree">成长树</string>
    <string name="appointment">预约</string>
    <string name="discovery">发现</string>
    <string name="personal_center">我的</string>
    <string name="next_vac">下次接种</string>
    <string name="must">必打</string>
    <string name="free">免费</string>
    <string name="symbol_rmb">￥</string>
    <string name="next_vac_time">2015年10月28日</string>
    <string name="next_vac_name">流脑疫苗</string>
    <string name="add_baby">添加宝宝</string>
    <string name="scan_gallery">浏览相册</string>

    <string-array name="choose_photo">
        <item>相册</item>
        <item>拍照</item>
    </string-array>

    <!-- Personal Center -->
    <string name="info_baby">我的宝宝</string>
    <string name="info_appointment">我的预约</string>
    <string name="info_message">我的消息</string>
    <string name="info_alert">我的提醒</string>
    <string name="info_setting">设置</string>
    <string name="info_feedback">用户反馈</string>
    <string name="info_about">关于</string>
    <string name="info_parent">家长信息</string>
    <string name="change_avatar">修改头像</string>
    <string name="user_name">用户昵称</string>
    <string name="user_photo_num">绑定手机</string>
    <string name="alert_before_vac">接种前提醒</string>
    <string name="alert_time">提醒时间</string>

    <!-- Appointment -->
    <string name="appoint_info_title">预约接种</string>
    <string name="appoint_confirm_title">预约详情</string>

    <!-- Discovery - BBS & Vaccine Konwledge -->
    <string name="bbs_baby">宝宝论坛</string>
    <string name="vac_knowledge">疫苗知识库</string>
    <string name="bbs">论坛</string>
    <string name="publish_post">发帖</string>
    <string name="detail">详情</string>
    <string name="vac_detail">疫苗详情</string>

</resources>