<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main_menu"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/home_menu_bkg"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/menu_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/btn_vac_tree"
            style="@style/menu_btn_style"
            android:drawableTop="@drawable/menu_tree_selector"
            android:text="@string/vac_tree" />

        <RadioButton
            android:id="@+id/btn_appointment"
            style="@style/menu_btn_style"
            android:drawableTop="@drawable/menu_appointment_selector"
            android:text="@string/appointment" />

        <RadioButton
            android:id="@+id/btn_add_branch"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_add_branch_height"
            android:layout_weight="1"
            android:background="@drawable/menu_add_branch_selector" />

        <RadioButton
            android:id="@+id/btn_discovery"
            style="@style/menu_btn_style"
            android:drawableTop="@drawable/menu_discovery_selector"
            android:text="@string/discovery" />

        <RadioButton
            android:id="@+id/btn_personal_center"
            style="@style/menu_btn_style"
            android:drawableTop="@drawable/menu_personal_center_selector"
            android:text="@string/personal_center" />
    </RadioGroup>

</LinearLayout>