<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_layout_bkg"
    tools:context="${relativePackage}.${activityClass}" >

    <ScrollView
        android:id="@+id/sv_tree"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/layout_main_menu"
        android:layout_below="@+id/layout_tips"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/tree_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_left_tree_top"
                android:background="@drawable/tree_top" />

            <com.statt.widget.VacTree
                android:id="@+id/layout_tree_trunk"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
            </com.statt.widget.VacTree>

            <ImageView
                android:id="@+id/tree_root"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/tree_root" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/layout_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/next_vac_tips"
        android:gravity="center_horizontal" >

        <RelativeLayout
            android:id="@+id/layout_info"
            android:layout_width="@dimen/dimen_next_vac_width"
            android:layout_height="@dimen/dimen_tips_tv_next_vac"
            android:layout_centerVertical="true" >

            <TextView
                android:id="@+id/tv_next_vac"
                android:layout_width="@dimen/dimen_next_vac_width"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/next_vac"
                android:textColor="@color/next_vac_tips"
                android:textSize="@dimen/font_size_next_vac_tips" />

            <TextView
                android:id="@+id/tv_is_must"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/tips_tag_bkg"
                android:gravity="center"
                android:text="@string/must"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_is_must" />

            <TextView
                android:id="@+id/tv_is_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/tips_tag_bkg"
                android:gravity="center"
                android:text="@string/free"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_is_free" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_next_vac"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_tips_height"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/layout_info" >

            <TextView
                android:id="@+id/tv_next_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_vac_time"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_vac_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:text="@string/next_vac_name"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_next_vac_name" />
        </RelativeLayout>

        <Button
            android:layout_width="@dimen/dimen_tips_appointment_width"
            android:layout_height="@dimen/dimen_tips_appointment_height"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_left_tip_appointment"
            android:layout_toEndOf="@+id/layout_next_vac"
            android:background="@drawable/home_tips_appointment_selector"
            android:text="@string/appointment"
            android:textSize="@dimen/font_size_tips_appointment" />
    </RelativeLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/home_menu_arc" />

</RelativeLayout>